--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ addons:
     - shellcheck
 
 script:
- - bash -c 'shopt -s globstar; shellcheck **/*.{sh,bash}'
+ - bash -c 'find . -name "*.sh"|xargs shellcheck'
 
 matrix:
   fast_finish: true
